# beaglebone-node

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAlsa.cmake  FindCairomm.cmake  FindGiomm.cmake  FindGlib.cmake  FindGlibmm.cmake  FindPango.cmake  FindPangomm.cmake  FindSigC++.cmake  Findharfbuzz.cmake  amd64.cmake  armhf.cmake
docs/scheme/expansion_board_B01/: expansion_board_B01.kicad_pcb  expansion_board_B01.kicad_pro  expansion_board_B01.kicad_sch
src/: Board.cpp  Board.hpp  BoardB01.cpp  BoardB01.hpp  ConfigParser.cpp  ConfigParser.hpp  GeneralData.cpp  GeneralData.hpp  GpioInt.cpp  GpioInt.hpp  GpioOut.cpp  GpioOut.hpp  Node.Mapper.cpp  Node.Mapper.hpp  Node.Type.hpp  Node.cpp  Node.hpp  NodeB01.cpp  NodeB01.hpp  OneShotHdmiDisplayB01.Type.hpp  OneShotHdmiDisplayB01.cpp  OneShotHdmiDisplayB01.hpp  OneShotLight.cpp  OneShotLight.hpp  PeriodicDoorSensor.Type.hpp  PeriodicDoorSensor.cpp  PeriodicDoorSensor.hpp  PeriodicDustSensor.cpp  PeriodicDustSensor.hpp  PeriodicHumiditySensor.Type.hpp  PeriodicHumiditySensor.cpp  PeriodicHumiditySensor.hpp  PeriodicSmokeSensor.Type.hpp  PeriodicSmokeSensor.cpp  PeriodicSmokeSensor.hpp  PhotoResistor.cpp  RemoteControl.Type.hpp  RemoteControl.cpp  RemoteControl.hpp  Serializer.Type.hpp  (+6 more)
src/TCP/: Acceptor.cpp  Acceptor.hpp  Client.cpp  Client.hpp  ConcurrentAcceptor.cpp  ConcurrentAcceptor.hpp  Connection.cpp  Connection.hpp  Server.cpp  Server.hpp
src/client/: Board.cpp  Board.hpp  BoardB01.Type.hpp  BoardB01.cpp  BoardB01.hpp  DustSensor.cpp  HdmiDisplayB01.cpp  HdmiDisplayB01.hpp  HumiditySensor.cpp  HumiditySensor.hpp  LedController.cpp  LedController.hpp  LightSensor.cpp  LightSensor.hpp  PeriodicDustSensor.Type.hpp  PeriodicDustSensor.cpp  PeriodicDustSensor.hpp  PeriodicHumiditySensor.cpp  PeriodicHumiditySensor.hpp  PeriodicSmokeSensor.cpp  PeriodicSmokeSensor.hpp  PhotoResistor.hpp  RemoteControl.Type.hpp  RemoteControl.cpp  RemoteControl.hpp  SmokeSensor.cpp  SmokeSensor.hpp  StatusLed.cpp  StatusLed.hpp  TimerDustSensor.Type.hpp  TimerDustSensor.cpp  TimerDustSensor.hpp  TimerHumiditySensor.Type.hpp  TimerHumiditySensor.cpp  TimerHumiditySensor.hpp  TimerSmokeSensor.Type.hpp  TimerSmokeSensor.cpp  TimerSmokeSensor.hpp  frame_buffer.c  gpio_int.c  (+5 more)
src/device/: DustSensor.hpp  HdmiDisplay.cpp  HdmiDisplay.hpp  frame_buffer.h  hdmi_speakers.c  module.h
src/server/: Node.Server.cpp  Node.Server.hpp  main.cpp
tests/: CMakeLists.txt
tests/src/: NodeB01.Test.cpp
